<resources>
    <string name="app_name">NaoApplication</string>
    <string name="action_settings">Exit</string>
    <string name="button_TurnOn">Bluetooth On/Off</string>
    <string name="button_FindClass">Show Destination Class</string>
    <string name="button_FindMe">Show Current Location</string>
    <string name="button_userNew">New</string>
    <string name="button_SetAlarm">Set Alarm</string>
    <string name="button_EmergencyExit">Show Emergency Exit</string>
    <string name="button_Exit">Exit</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_current_location">CurrentLocationActivity</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="sync_button">Synchronize</string>
    <string name="identifier">Identifier</string>
    <string name="identifier_hint">Analytics Identifier</string>
    <string name="service_starting">Service starting&#8230;</string>
    <string name="service_started">Service is started</string>
    <string name="service_stopped">Service is stopped</string>
    <string name="permission_msg">You must validate permission to use this feature</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Retrieving Co-ordinates</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="title_activity_current_classroom">CurrentClassroomActivity</string>


</resources>
