<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.adamcrossan.naoapplication.MenuActivity"
    tools:showIn="@layout/activity_menu"
    android:orientation="vertical" >


    <Button
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:onClick="findClass"
        android:text="@string/button_FindClass"
        android:id="@+id/findClass"
        android:layout_alignTop="@+id/FindMe"
        android:layout_alignParentEnd="true"
        android:layout_row="1"
        android:layout_column="1"
        android:paddingTop="17dp"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:onClick="turnOn"
        android:text="@string/button_EmergencyExit"
        android:id="@+id/Emergency"
        android:layout_above="@+id/exit"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="62dp"
        android:layout_below="@+id/findClass"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginLeft="15dp" />

    <Button
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:text="@string/button_SetAlarm"
        android:id="@+id/setAlarm"
        android:layout_alignBottom="@+id/Emergency"
        android:layout_alignStart="@+id/findClass"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/findClass"
        android:layout_row="2"
        android:layout_column="1"
        android:paddingBottom="13dp" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:onClick="Finish"
        android:text="@string/button_Exit"
        android:id="@+id/exit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_marginLeft="90dp"
        android:layout_columnSpan="2"
        android:layout_marginBottom="66dp" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:id="@+id/userSpinner"
        android:layout_row="0"
        android:layout_column="1" />

    <Button
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:onClick="GetXY"
        android:text="@string/button_FindMe"
        android:id="@+id/FindMe"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/turnOn"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginTop="08dp"
        android:layout_marginRight="08dp"
        android:layout_marginLeft="15dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_userNew"
        android:onClick="NewUser"
        android:id="@+id/newBtn"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="10dp" />

</GridLayout>
